# fluidSim

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  imgui.ini
.cache/clangd/index/: Balle.h.4C047ABCB76C48DA.idx  Box.h.E672E1F0DDCC4836.idx  Start.h.1781D6F4DF38E099.idx  StartRandom.h.45566D8B0A9C6304.idx  main.cpp.8ED9BF62B6076A92.idx
.github/workflows/: qodana_code_quality.yml
include/: Balle.h  Box.h  CMakeLists.txt  Start.h  StartRandom.h
lib/: CMakeLists.txt
lib/sfml-imgui/: CMakeLists.txt
src/: Balle.cpp  Box.cpp  CMakeLists.txt  Start.cpp  StartRandom.cpp  main.cpp
